@@ -1082,7 +1082,7 @@
 				      "Atom Selection:"
 				      "//A/1-2"
 				      (lambda (imol text)
-					(let ((dots-handle (dots imol text 1 1)))
+					(let ((dots-handle (dots imol text text 1 1)))
 					  (format #t "dots handle: ~s~%" dots-handle))))))
 
 	(add-simple-coot-menu-menuitem
