@@ -18,6 +18,18 @@ namespace coot {
    class colour_t {
    public:
       std::vector<float> col;
+      colour_t(float r, float g, float b) {
+	 col.resize(3);
+	 col[0] = r;
+	 col[1] = g;
+	 col[2] = b;
+      }
+      colour_t() {
+	 col.resize(3);
+	 col[0] = 0.5;
+	 col[1] = 0.5;
+	 col[2] = 0.5;
+      }
    };
    //
 
